# mojxml2geojson

./: .dockerignore  .gitignore  01229-4500-1  Dockerfile  LICENSE  README-ja.md  README.md  build-windows-ja.md  build-windows.md  docker-entrypoint.sh  entrypoint.sh  setup.cfg
src/mojxml2geojson/: core.py
src/package/: ConvertDatum.py  MojXMLtoGeoJSON.py  MojXmlDef.py  MojXmlPolygon.py  PointOnSurface.py  xml2geojson.py
test/: test_ConvertDatum.py  test_MojXmlDef.py  test_PointOnSurface.py
