[metadata]
name = mojxml2geojson
version = attr: mojxml2geojson.__version__
license_file = LICENSE

[options]
zip_safe = False
package_dir=
    =src
packages = find:
install_requires =
  xmltodict
  geojson
  pyproj
  # MacOSX: brew install gdal
  gdal

[options.packages.find]
where=src

[options.extras_require]
dev =
  pytest

[options.entry_points]
console_scripts =
  mojxml2geojson = mojxml2geojson.core:main
